Bug 25798 - polkit-backend-1 headers do not reference polkit properly
Summary: polkit-backend-1 headers do not reference polkit properly
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: All All
: medium minor
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-25 22:28 UTC by Jonathan Conder
Modified: 2010-08-09 12:02 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
clean up polkitbackend headers (2.96 KB, patch)
2009-12-25 22:28 UTC, Jonathan Conder
Details | Splinter Review

Description Jonathan Conder 2009-12-25 22:28:43 UTC
Created attachment 32296 [details] [review]
clean up polkitbackend headers

Hi, I am currently working on PolicyKit bindings for vala, and have come across a few mistakes in the polkit-backend-1 headers. For example, polkitbackendactionlookup.h references PolkitDetails without including polkit.h. This causes bindings generation to fail as the generator doesn't know about the objects that haven't been #included.

Attached is a patch to fix all issues of this kind. In addition it introduces consistency in #include style (using <polkitbackend/foo.h> instead of "foo.h") and makes polkitbackend.h check for _POLKIT_BACKEND_COMPILATION as opposed to POLKIT_BACKEND_COMPILATION, which is what the other headers do as well.

The patch was made against release 0.95, and while there have been some changes in git since then I don't think they affect the patch.
Comment 1 David Zeuthen (not reading bugmail) 2010-08-09 12:02:43 UTC
OK, I did something like this

http://cgit.freedesktop.org/PolicyKit/commit/?id=7b0c5269dadec47e55beca398ce6d571b32438e6

Note that

http://cgit.freedesktop.org/PolicyKit/commit/?id=7d5eff96c830a9fbd23bd5ef2067d02769fee21b

may be relevant to bindings since it removes API/ABI.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.