Properly reference headers

Based on a patch from Jonathan Conder <j@skurvy.no-ip.org>, see
https://bugs.freedesktop.org/show_bug.cgi?id=25798

Signed-off-by: David Zeuthen <davidz@redhat.com>